<resources>
    <string name="app_name">CHD初诊仪</string>
    <string name="app_company">Yunnan University</string>
    <string name="app_version">v1.0.0</string>
    <string name="app_develop">RobinTang</string>
    <string name="appname">程序</string>
    <string name="company">公司</string>
    <string name="version">版本</string>
    <string name="develop">开发者</string>
    <string name="titleinfoset">信息设置</string>
    <string name="titlesample">心音采集</string>
    <string name="titleresult">分析结果</string>
    <string name="PCGsample">心音信号采集</string>
    <string name="PCGselect">心音信号选择</string>
    <string name="resultpcg">心音信号</string>
    <string name="resultfarea">频域</string>
    <string name="resultftarea">时频域</string>
    <string name="resultreport">分析报告</string>
    <string name="sample">采集</string>
    <string name="record">记录</string>
    <string name="select">选择</string>
    <string name="open">打开</string>
    <string name="result">结果</string>
    <string name="ok">确定</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="window">窗口</string>
    <string name="length">长度</string>
    <string name="analysis">分析</string>
    <string name="set">设置</string>
    <string name="save">保存</string>
    <string name="savedata">保存数据</string>
    <string name="savingdata">正在保存数据……</string>
    <string name="sex">性别</string>
    <string name="bed">床位</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="year">岁</string>
    <string name="month">月</string>  
    <string name="day">天</string>
    <string name="name">姓名</string>
    <string name="exlpain">说明</string>
    <string name="age">年龄</string>
    <string name="address">地点</string>
    <string name="openfile">打开文件</string>
    <string name="fileopening">正在打开文件……</string>
    <string name="fileopenerr">打开文件失败</string>
    <string name="lengthselect">长度选择</string>
    <string name="analysising">正在分析……</string>
    <string name="nowhavenoresult">抱歉，暂时没有分析结果，开发者正在努力……</string>
    <string name="time">时间</string>
    <string name="filename">文件名</string>
    <string name="exlpain3w">说   明</string>
    <string name="hintoffilename">要保存的文件名</string>
    <string name="explainforsavedata">关于该次采集的相关说明</string>
    
    <string name="sdcardunmounted">没有插入SD卡！！！</string>
    <string name="sdcardunmountedcantsave">没有插入SD卡，不能保存数据！！！</string>
    <string name="createcachefilefail">创建临时文件失败！！！</string>
    <string name="dataalreadysaveto">数据已经保存到{0}。</string>
    <string name="remark">备注</string>
    <string name="empty"/>
    <string name="emptys">空空空</string>
    <string name="exit">退出</string>
    
    <string name="mitral">二尖瓣</string>
    <string name="tricuspid">三尖瓣</string>
    <string name="pulmonary">肺动脉瓣</string>
    <string name="aortic">主动脉瓣</string>
    
    <string name="mitralfile">二尖瓣波形文件</string>
    <string name="tricuspidfile">三尖瓣波形文件</string>
    <string name="pulmonaryfile">肺动脉瓣波形文件</string>
    <string name="aorticfile">主动脉瓣波形文件</string>
    
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="waitting">请稍等……</string>
    <string name="setdoctorinfo">设置医生信息</string>
    <string name="email">邮箱</string>
    <string name="returnfail">回传失败!!!</string>
    <string name="errorage">错误的年龄</string>
    <string name="frequence">采样率</string>
    
    <!-- save info -->
    <string name="appinfo">应用程序信息</string>
    <string name="doctorinfo">医生信息</string>
    <string name="patientinfo"> 病人信息</string>
    <string name="sampleinfo">采样信息</string>
    <string name="datafileinfo">数据文件信息</string>
    <string name="num_0">0</string>
    <string name="filenameempty">文件名为空，保存失败!!!</string>
    <string name="text">文本</string>
    <string name="openingfile">正在打开文件…</string>
    <string name="info">信息</string>
</resources>