<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <include
        android:id="@+id/ll_sample_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        layout="@layout/inc_sample_left" />

    <CheckBox
        android:id="@+id/ck_expand"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@drawable/expand_sel"
        android:button="@drawable/expand_sel"
        android:checked="false" />

    <LinearLayout
        android:id="@+id/ll_sample_waves"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <com.sin.android.control.WaveView
            android:id="@+id/wv_aortic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:tag="@string/aortic" />

        <com.sin.android.control.WaveView
            android:id="@+id/wv_pulmonary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:tag="@string/pulmonary" />

        <com.sin.android.control.WaveView
            android:id="@+id/wv_tricuspid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:tag="@string/tricuspid" />

        <com.sin.android.control.WaveView
            android:id="@+id/wv_mitral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:tag="@string/mitral" />
    </LinearLayout>

</LinearLayout>